objects/UspsSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>USPS Web Tools API</description>
    <fields>
        <fullName>ProductionBaseUrl__c</fullName>
        <defaultValue>&apos;http://production.shippingapis.com&apos;</defaultValue>
        <description>HTTP/HTTPS protocols are used for exchange of data</description>
        <inlineHelpText>HTTP/HTTPS protocols are used for exchange of data</inlineHelpText>
        <label>Production Base URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecureBaseUrl__c</fullName>
        <defaultValue>&apos;https://secure.shippingaps.com&apos;</defaultValue>
        <description>Certain APIs have Personally Identifiable Information (PII) that requires the use of secure HTTP connections under USPS policies</description>
        <inlineHelpText>Certain APIs have Personally Identifiable Information (PII) that requires the use of secure HTTP connections under USPS policies</inlineHelpText>
        <label>Secure Base URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>USERID attribute used for API authentication</description>
        <inlineHelpText>USERID attribute used for API authentication</inlineHelpText>
        <label>User ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>USPS Setting</label>
</CustomObject>